Deploying-a-Highly-Available-Web-Application-on-AWS-using-terraform/igw.tf
# Create internet gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id 

  tags = {
    Name= "IGW"
  }
}
