Deploying-a-Highly-Available-Web-Application-on-AWS-using-terraform/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.cidr_block

  tags = {
    Name = "vpc-main"
  }
}
